<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/main_flashlight"
        android:title="@string/main_flashlight"
        android:icon="@drawable/ic_flashlight"/>
    <item
        android:id="@+id/main_lamp"
        android:title="@string/main_lamp"
        android:icon="@drawable/ic_lamp"/>
    <item
        android:id="@+id/main_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/main_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_person"/>
    <item
        android:id="@+id/main_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help"/>
</menu>