<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".SettingsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gotham"
        android:textAlignment="center"
        android:text="@string/tv_text_title_ShakeThreshold"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:fontFamily="@font/gotham"
        android:text="@string/tv_text_explaination_st"
        android:textSize="25sp" />
    <SeekBar
        android:id="@+id/skbThreshold"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_margin="15dp"
        style="@style/Base.Widget.AppCompat.SeekBar"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvThresholdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/gotham"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ivShakeGif"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/iv_contentDisc" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/gotham"
            android:background="@drawable/button"
            android:onClick="saveSettings"
            android:text="@string/button_text_Save"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</LinearLayout>